Added project steps

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -4,13 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ROC and AUC \n",
     "\n",
+    "This notebook covers the basics of Receiver Operator Characteristic (ROC) graphs and the concept of the area under the curve (AUC).\n",
     "\n",
-    "This\n",
+    "Source: \"ROC and AUC, Clearly Explained!\", StatQuest with Josh Starmer https://www.youtube.com/watch?v=4jRBRDbJemM\n",
     "\n",
-    "Source: \"ROC and AUC, Clearly Explained!\", StatQuest with Josh Starmer\n",
-    "https://www.youtube.com/watch?v=4jRBRDbJemM"
+    "Data Science Project Steps:\n",
+    "\n",
+    "#Load the data\n",
+    "\n",
+    "#Define appropriate X and y\n",
+    "\n",
+    "#Normalize the Data\n",
+    "\n",
+    "# Split the data into train and test sets.\n",
+    "\n",
+    "#Fit a model\n",
+    "\n",
+    "#Predict\n",
+    "y_hat_test = logreg.predict(X_test)\n",
+    "\n",
+    "#Data Preview"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
