Added sensitivity and specificity information

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -12,20 +12,26 @@
     "\n",
     "Data Science Project Steps:\n",
     "\n",
-    "#Load the data\n",
+    "    1) Load the data\n",
     "\n",
-    "#Define appropriate X and y\n",
+    "    2) Define appropriate X and y\n",
     "\n",
-    "#Normalize the Data\n",
+    "    3) Normalize the Data\n",
     "\n",
-    "# Split the data into train and test sets.\n",
+    "    4) Split the data into train and test sets.\n",
     "\n",
-    "#Fit a model\n",
+    "    5) Fit a model\n",
     "\n",
-    "#Predict\n",
-    "y_hat_test = logreg.predict(X_test)\n",
+    "    6) Predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1: Specificity and Sensitivity\n",
     "\n",
-    "#Data Preview"
+    "Sensitivity is the model's ability to correctly identify a class. Specificity is the model's ability to correctly i"
    ]
   },
   {
