Added sensitivity and specificity definitions

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Part 1: Specificity and Sensitivity\n",
     "\n",
-    "Sensitivity is the model's ability to correctly identify a class. Specificity is the model's ability to correctly i"
+    "Sensitivity is the model's ability to correctly identify positives (belongs to a class). Specificity is the model's ability to correctly identify negatives (does not belong to a class)"
    ]
   },
   {
