Added binary cf

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -29,9 +29,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: Specificity and Sensitivity\n",
+    "## Part 1: Model Confusion Matrix\n",
     "\n",
-    "Sensitivity is the model's ability to correctly identify positives (belongs to a class). Specificity is the model's ability to correctly identify negatives (does not belong to a class)"
+    "![Binary Classifiction Confusion Matrix](supporting_images/Binary_Classifiction_Confusion_Matrix.jpg)\n",
+    "\n",
+    "\n",
+    "## Part 2: Specificity and Sensitivity\n",
+    "\n",
+    "Sensitivity is the model's ability to correctly identify positives (belongs to a class). Specificity is the model's ability to correctly identify negatives (does not belong to a class)\n",
+    "\n"
    ]
   },
   {
