Added sensitivity and specificity equations

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -31,7 +31,13 @@
    "source": [
     "## Part 1: Model Confusion Matrix\n",
     "\n",
+    "\n",
+    "### A confusion matrix for a binary model\n",
     "![Binary Classifiction Confusion Matrix](supporting_images/Binary_Classifiction_Confusion_Matrix.jpg)\n",
+    "\n",
+    "\n",
+    "### A confusion matrix for a multi-categorical model\n",
+    "![Multi-Categorical Classifiction Confusion Matrix](supporting_images/Multi_Categorical_Models.png)\n",
     "\n",
     "\n",
     "## Part 2: Specificity and Sensitivity\n",
