--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -40,9 +40,19 @@
     "![Multi-Categorical Classifiction Confusion Matrix](supporting_images/Multi_Categorical_Models.png)\n",
     "\n",
     "\n",
-    "## Part 2: Specificity and Sensitivity\n",
+    "## Part 2: Sensitivity and Specificity\n",
     "\n",
-    "Sensitivity is the model's ability to correctly identify positives (belongs to a class). Specificity is the model's ability to correctly identify negatives (does not belong to a class)\n",
+    "Sensitivity is the model's ability to correctly identify positives (belongs to a class). Specificity is the model's ability to correctly identify negatives (does not belong to a class):\n",
+    "\n",
+    "![Sensitivity and Specificity Calculations](supporting_images/Sensitivity_and_Specificity.png)\n",
+    "\n",
+    "\n",
+    "### Calculating Sensitivity\n",
+    "![Calculating Sensitivity](supporting_images/Sensitivity_Categorical_Models.png)\n",
+    "\n",
+    "\n",
+    "### Calculating Specificity\n",
+    "![Calculating Specificity](supporting_images/Specificity_Categorical_Models.png)\n",
     "\n"
    ]
   },
