Added NYC weather Data

--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -63,7 +63,8 @@
     "## Part 3: ROC and AUC\n",
     "\n",
     "Let's evaluate a categorical model with a threshold feature.\n",
-    "\n"
+    "\n",
+    "Is it raining outside based on humidity."
    ]
   },
   {
