--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -256,6 +256,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import cycle\n",
+    "\n",
+    "from sklearn import svm, datasets\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import label_binarize\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from scipy import interp\n",
+    "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import some data to play with\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "\n",
+    "# Encode the classes\n",
+    "y = label_binarize(y, classes=[0, 1, 2])\n",
+    "n_classes = y.shape[1]\n",
+    "\n",
+    "# Add noisy features to make the problem harder\n",
+    "random_state = np.random.RandomState(0)\n",
+    "n_samples, n_features = X.shape\n",
+    "X = np.c_[X, random_state.randn(n_samples, 200 * n_features)]\n",
+    "\n",
+    "# shuffle and split training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.5,\n",
+    "                                                    random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Learn to predict each class against the other\n",
+    "classifier = OneVsRestClassifier(svm.SVC(kernel='linear', probability=True,\n",
+    "                                 random_state=random_state))\n",
+    "y_score = classifier.fit(X_train, y_train).decision_function(X_test)\n",
+    "\n",
+    "# Compute ROC curve and ROC area for each class\n",
+    "fpr = dict()\n",
+    "tpr = dict()\n",
+    "roc_auc = dict()\n",
+    "for i in range(n_classes):\n",
+    "    fpr[i], tpr[i], _ = roc_curve(y_test[:, i], y_score[:, i])\n",
+    "    roc_auc[i] = auc(fpr[i], tpr[i])\n",
+    "\n",
+    "# Compute micro-average ROC curve and ROC area\n",
+    "fpr[\"micro\"], tpr[\"micro\"], _ = roc_curve(y_test.ravel(), y_score.ravel())\n",
+    "roc_auc[\"micro\"] = auc(fpr[\"micro\"], tpr[\"micro\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
