--- a/ROC_and_AUC_Examples.ipynb
+++ b/ROC_and_AUC_Examples.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,16 +299,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the classifier and a scoring array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Learn to predict each class against the other\n",
     "classifier = OneVsRestClassifier(svm.SVC(kernel='linear', probability=True,\n",
     "                                 random_state=random_state))\n",
-    "y_score = classifier.fit(X_train, y_train).decision_function(X_test)\n",
-    "\n",
+    "y_score = classifier.fit(X_train, y_train).decision_function(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add additional metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Compute ROC curve and ROC area for each class\n",
     "fpr = dict()\n",
     "tpr = dict()\n",
